--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,23 @@
-Title: Sample App - A Lengthy Title
-ShortName: Sample App
-Date: 2021-05-13
+Title: Classification Using Neural Networks
+ShortName: Neural Networks
+Date: 2023-07-17
 Lifecycle: experimental
 Authors@R: c(
-    person(given = "Neil", family = "Hatfield", email = "neil.hatfield@psu.edu", role = c("aut", "cre")),
+    person(given = "Rob", family = "Chappell", email = "rwc5541@psu.edu", role = c("aut", "cre")),
+    person(given = "Neil", family = "Hatfield", email = "neil.hatfield@psu.edu", role = c("aut")),
     person(given = "Robert", family = "Carey", email = "rpc5102@psu.edu", role = c("aut"))
   )
-Chapter: Sample Chapter
-Description: This app is focused on the common types of xyz.
+Chapter: Data Science
+Description: This app is focused on the structure of neural networks, showing how they perform in speech recognition.
 LearningObjectives: c(
-    "The student will learn to understand Concept A in way z.",
-    "The student will learn to understand Concept B as description y."
+    "The student will learn to understand the structure of Neural Networks
+    through classification examples.",
+    "The student will learn to understand the differences in the models for
+    the two examples."
   )
 DisplayMode: Normal
-URL: https://psu-eberly.shinyapps.io/Sample_App
-BugReports: https://github.com/EducationShinyAppTeam/Sample_App/issues
+URL: https://psu-eberly.shinyapps.io/Classification_Using_Neural_Networks
+BugReports: https://github.com/EducationShinyAppTeam/Classification_Using_Neural_Networks/issues
 License: CC-BY-NC-SA-4.0
 Tags: simulation
 Type: Shiny
